--- a/css/styles.css
+++ b/css/styles.css
@@ -380,6 +380,54 @@ html{
     text-align: center;
     padding: 20px 0;
 }
+.portfolio .galeria{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.portfolio .galeria .proyecto{
+    position: relative;
+    max-width: 340px;
+    width: 340px;
+    max-height: 280px;
+    margin: 10px;
+    cursor: pointer;
+}
+.portfolio .galeria .proyecto img{
+    width: 100%;
+    height: 280px;
+    display: block;
+}
+.portfolio .galeria .proyecto .overlay{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background: linear-gradient(rgba(106,169,233,.8), rgba(106,169,233,.8));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: 1s;
+    font-size: 18px;
+    letter-spacing: 3px;
+    opacity: 0;
+}
+.portfolio .galeria .proyecto .overlay h3{
+    margin-bottom: 20px;
+    transition: 1s;
+}
+.portfolio .galeria .proyecto .overlay:hover{
+    opacity: 1;
+}
+.portfolio .galeria .proyecto .overlay:hover h3{
+    margin-bottom: 0px;
+}
+
+.portfolio .galeria a{
+    text-decoration: none;
+    color: #fff;
+}
 /* SECCION CONTACTO */
 .contacto{
     background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1));
@@ -551,6 +599,17 @@ footer .arriba{
         width: 100%;
     }
 
+    .portfolio .galeria{
+        display: block;
+        width: 100%;
+    }
+    .portfolio .galeria .proyecto{
+        max-width: 100%;
+    }
+    .portfolio .galeria .proyecto img{
+        width: 100%;
+    }
+    
     .contacto .fila{
         display: block;
     }
