--- a/css/styles.css
+++ b/css/styles.css
@@ -371,7 +371,7 @@ html{
     padding: 50px 20px;
 }
 .portfolio .contenido-seccion{
-    max-width: 1100px;
+    max-width: 1200px;
     margin: auto;
 }
 .portfolio h2{
@@ -387,16 +387,18 @@ html{
 }
 .portfolio .galeria .proyecto{
     position: relative;
-    max-width: 340px;
-    width: 340px;
-    max-height: 280px;
-    margin: 10px;
+    max-width: 250px;
+    width: 250px;
+    max-height: 250px;
+    margin: auto;
+    margin-bottom: 25px;
     cursor: pointer;
 }
 .portfolio .galeria .proyecto img{
     width: 100%;
-    height: 280px;
+    height: 250px;
     display: block;
+    border-radius: 10px;
 }
 .portfolio .galeria .proyecto .overlay{
     position: absolute;
@@ -412,6 +414,7 @@ html{
     font-size: 18px;
     letter-spacing: 3px;
     opacity: 0;
+    border-radius: 10px;
 }
 .portfolio .galeria .proyecto .overlay h3{
     margin-bottom: 20px;
