--- a/css/styles.css
+++ b/css/styles.css
@@ -352,17 +352,17 @@ html {
 
 .portfolio .galeria .proyecto {
     position: relative;
-    max-width: 250px;
-    width: 250px;
-    max-height: 250px;
-    margin: auto;
+    max-width: 200px;
+    width: 200px;
+    max-height: 200px;
+    margin: 10px;
     margin-bottom: 25px;
     cursor: pointer;
 }
 
 .portfolio .galeria .proyecto img {
     width: 100%;
-    height: 250px;
+    height: 200px;
     display: block;
     border-radius: 10px;
 }
@@ -603,6 +603,7 @@ footer .arriba {
 
     .portfolio .galeria .proyecto {
         max-width: 100%;
+        margin: 10px auto;
     }
 
     .portfolio .galeria .proyecto img {
